Se cambia el nombre de packages ajenos al proyecto para orientación

--- a/app/src/main/res/layout/activity_main_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_main_realizar_pedido.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_container_view"
-    tools:context=".pruebafrgamentpedido.MainActivityRealizarPedido"/>
+    tools:context=".pruebaviewmodelajenoalproyecto.MainActivityRealizarPedido"/>
 
