--- a/app/src/main/res/layout/activity_main_room.xml
+++ b/app/src/main/res/layout/activity_main_room.xml
@@ -6,6 +6,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".room.MainActivityRoom">
 
+    <!--<LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/botonCarrito"
+                android:background="@drawable/ic_baseline_shopping_cart_24"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </LinearLayout> -->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRoom"
         android:layout_width="match_parent"
@@ -13,7 +44,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="10dp"/>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
